--- a/Test QP.ipynb
+++ b/Test QP.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x12e2c209330>"
+       "<torch._C.Generator at 0x2268f50d3d0>"
       ]
      },
      "execution_count": 1,
@@ -185,7 +185,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:24<00:00, 11.85it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:26<00:00, 11.52it/s]\n"
      ]
     },
     {
@@ -194,13 +194,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    200.432000          3.835546      0.083735\n",
-      "std      78.224654          5.574005      0.034054\n",
-      "min      36.000000          0.000000      0.057559\n",
-      "25%     149.000000          0.000000      0.061650\n",
-      "50%     190.000000          0.000000      0.075394\n",
-      "75%     247.000000          8.126751      0.076709\n",
-      "max     511.000000         25.352531      0.228122\n"
+      "mean    200.432000          3.835546      0.086105\n",
+      "std      78.224654          5.574005      0.034282\n",
+      "min      36.000000          0.000000      0.058433\n",
+      "25%     149.000000          0.000000      0.073763\n",
+      "50%     190.000000          0.000000      0.075604\n",
+      "75%     247.000000          8.126751      0.077541\n",
+      "max     511.000000         25.352531      0.252998\n"
      ]
     }
    ],
@@ -259,35 +259,35 @@
        "      <td>[-1.0, 8.0, -1.0, 8.0, 2.0]</td>\n",
        "      <td>134.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.117057</td>\n",
+       "      <td>0.252998</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>[-3.0, 7.0, 0.0, 8.0, 1.0]</td>\n",
        "      <td>123.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.074816</td>\n",
+       "      <td>0.089470</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>[-6.0, 8.0, 1.0, 10.0, 4.0]</td>\n",
        "      <td>217.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.076735</td>\n",
+       "      <td>0.090766</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>[-2.0, 12.0, 1.0, 9.0, 6.0]</td>\n",
        "      <td>266.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.075107</td>\n",
+       "      <td>0.075873</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>[-3.0, 7.0, -3.0, 8.0, -1.0]</td>\n",
        "      <td>132.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.075651</td>\n",
+       "      <td>0.106205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -301,35 +301,35 @@
        "      <td>[-6.0, 11.0, -2.0, 13.0, 3.0]</td>\n",
        "      <td>339.0</td>\n",
        "      <td>17.149001</td>\n",
-       "      <td>0.060144</td>\n",
+       "      <td>0.060207</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
        "      <td>[-1.0, 11.0, 1.0, 9.0, 4.0]</td>\n",
        "      <td>220.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.077659</td>\n",
+       "      <td>0.076279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
        "      <td>[-1.0, 11.0, 1.0, 9.0, 4.0]</td>\n",
        "      <td>220.0</td>\n",
        "      <td>5.488008</td>\n",
-       "      <td>0.074160</td>\n",
+       "      <td>0.059531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
        "      <td>[-1.0, 11.0, 1.0, 9.0, 4.0]</td>\n",
        "      <td>220.0</td>\n",
        "      <td>9.041870</td>\n",
-       "      <td>0.062052</td>\n",
+       "      <td>0.107208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
        "      <td>[-1.0, 11.0, 1.0, 9.0, 4.0]</td>\n",
        "      <td>220.0</td>\n",
        "      <td>4.928075</td>\n",
-       "      <td>0.181166</td>\n",
+       "      <td>0.060205</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -338,17 +338,17 @@
       ],
       "text/plain": [
        "                               Sol  Obj Val  Constraints Viol  Elapsed Time\n",
-       "0      [-1.0, 8.0, -1.0, 8.0, 2.0]    134.0          0.000000      0.117057\n",
-       "1       [-3.0, 7.0, 0.0, 8.0, 1.0]    123.0          0.000000      0.074816\n",
-       "2      [-6.0, 8.0, 1.0, 10.0, 4.0]    217.0          0.000000      0.076735\n",
-       "3      [-2.0, 12.0, 1.0, 9.0, 6.0]    266.0          0.000000      0.075107\n",
-       "4     [-3.0, 7.0, -3.0, 8.0, -1.0]    132.0          0.000000      0.075651\n",
+       "0      [-1.0, 8.0, -1.0, 8.0, 2.0]    134.0          0.000000      0.252998\n",
+       "1       [-3.0, 7.0, 0.0, 8.0, 1.0]    123.0          0.000000      0.089470\n",
+       "2      [-6.0, 8.0, 1.0, 10.0, 4.0]    217.0          0.000000      0.090766\n",
+       "3      [-2.0, 12.0, 1.0, 9.0, 6.0]    266.0          0.000000      0.075873\n",
+       "4     [-3.0, 7.0, -3.0, 8.0, -1.0]    132.0          0.000000      0.106205\n",
        "..                             ...      ...               ...           ...\n",
-       "995  [-6.0, 11.0, -2.0, 13.0, 3.0]    339.0         17.149001      0.060144\n",
-       "996    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          0.000000      0.077659\n",
-       "997    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          5.488008      0.074160\n",
-       "998    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          9.041870      0.062052\n",
-       "999    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          4.928075      0.181166\n",
+       "995  [-6.0, 11.0, -2.0, 13.0, 3.0]    339.0         17.149001      0.060207\n",
+       "996    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          0.000000      0.076279\n",
+       "997    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          5.488008      0.059531\n",
+       "998    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          9.041870      0.107208\n",
+       "999    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          4.928075      0.060205\n",
        "\n",
        "[1000 rows x 4 columns]"
       ]
@@ -401,7 +401,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:02<00:00,  8.15it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:03<00:00,  8.11it/s]\n"
      ]
     },
     {
@@ -410,13 +410,13 @@
      "text": [
       "          Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.00000       1000.000000   1000.000000\n",
-      "mean    179.96800         28.608444      0.121861\n",
-      "std      76.37923          7.851483      0.044695\n",
-      "min      26.00000         10.634741      0.058464\n",
-      "25%     130.00000         21.912093      0.091372\n",
-      "50%     170.00000         27.912093      0.121078\n",
-      "75%     222.00000         33.912093      0.135634\n",
-      "max     471.00000         53.912093      0.290110\n"
+      "mean    179.96800         28.608444      0.122501\n",
+      "std      76.37923          7.851483      0.045426\n",
+      "min      26.00000         10.634741      0.058648\n",
+      "25%     130.00000         21.912093      0.091570\n",
+      "50%     170.00000         27.912093      0.121115\n",
+      "75%     222.00000         33.912093      0.136526\n",
+      "max     471.00000         53.912093      0.427435\n"
      ]
     }
    ],
@@ -604,7 +604,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 234.12it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 237.09it/s]\n"
      ]
     },
     {
@@ -613,13 +613,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    201.908000          8.299482      0.003886\n",
-      "std      68.289846          2.787089      0.000768\n",
-      "min      47.000000          2.687708      0.002000\n",
-      "25%     153.000000          6.265262      0.003503\n",
-      "50%     194.000000          8.012799      0.003974\n",
-      "75%     247.000000         10.265262      0.004235\n",
-      "max     471.000000         18.542614      0.007208\n"
+      "mean    201.908000          8.299482      0.003830\n",
+      "std      68.289846          2.787089      0.000763\n",
+      "min      47.000000          2.687708      0.002406\n",
+      "25%     153.000000          6.265262      0.003390\n",
+      "50%     194.000000          8.012799      0.003687\n",
+      "75%     247.000000         10.265262      0.004047\n",
+      "max     471.000000         18.542614      0.007840\n"
      ]
     }
    ],
@@ -880,7 +880,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 213.29it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 239.30it/s]\n"
      ]
     },
     {
@@ -889,13 +889,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    207.073000          8.717267      0.004213\n",
-      "std      73.458327          3.018748      0.001014\n",
-      "min      40.000000          2.650724      0.002000\n",
-      "25%     156.000000          6.302247      0.003510\n",
-      "50%     198.000000          8.302247      0.004001\n",
-      "75%     255.000000         10.542614      0.004998\n",
-      "max     500.000000         20.109414      0.007771\n"
+      "mean    207.073000          8.717267      0.003774\n",
+      "std      73.458327          3.018748      0.000817\n",
+      "min      40.000000          2.650724      0.001999\n",
+      "25%     156.000000          6.302247      0.003005\n",
+      "50%     198.000000          8.302247      0.003576\n",
+      "75%     255.000000         10.542614      0.004144\n",
+      "max     500.000000         20.109414      0.006895\n"
      ]
     }
    ],
@@ -1300,7 +1300,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 229.03it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 242.27it/s]\n"
      ]
     },
     {
@@ -1309,13 +1309,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    189.095000          9.041808      0.003920\n",
-      "std      72.065911          2.930551      0.000862\n",
-      "min      27.000000          2.735447      0.001999\n",
-      "25%     136.000000          6.887273      0.003317\n",
-      "50%     183.500000          8.585647      0.003999\n",
-      "75%     234.000000         10.841309      0.004416\n",
-      "max     443.000000         18.579599      0.008525\n"
+      "mean    189.095000          9.041808      0.003715\n",
+      "std      72.065911          2.930551      0.000761\n",
+      "min      27.000000          2.735447      0.002000\n",
+      "25%     136.000000          6.887273      0.003001\n",
+      "50%     183.500000          8.585647      0.003512\n",
+      "75%     234.000000         10.841309      0.004005\n",
+      "max     443.000000         18.579599      0.006532\n"
      ]
     }
    ],
@@ -1679,22 +1679,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 218.08it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:47<00:00,  9.30it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    207.073000          8.717267      0.004109\n",
-      "std      73.458327          3.018748      0.000835\n",
-      "min      40.000000          2.650724      0.002000\n",
-      "25%     156.000000          6.302247      0.003512\n",
-      "50%     198.000000          8.302247      0.004004\n",
-      "75%     255.000000         10.542614      0.004564\n",
-      "max     500.000000         20.109414      0.007529\n"
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.00000       1000.000000   1000.000000\n",
+      "mean    247.45200          9.241023      0.105829\n",
+      "std      85.59865          3.314144      0.011762\n",
+      "min      36.00000          2.458095      0.095200\n",
+      "25%     184.00000          6.724667      0.099161\n",
+      "50%     239.00000          8.735447      0.101239\n",
+      "75%     302.00000         11.495080      0.109208\n",
+      "max     587.00000         22.443954      0.201598\n"
      ]
     }
    ],
@@ -1703,7 +1703,7 @@
     "for p in tqdm(p_test):\n",
     "    datapoints = {\"p\": torch.tensor(np.array([p]), dtype=torch.float32), \"name\": \"test\"}\n",
     "    tick = time.time()\n",
-    "    output = problem(datapoints)\n",
+    "    output = problem_fp(datapoints)\n",
     "    tock = time.time()\n",
     "    x = output[\"test_x_rnd\"]\n",
     "    # get values\n",
