--- a/Test Rosenbrock.ipynb
+++ b/Test Rosenbrock.ipynb
@@ -462,7 +462,7 @@
     "# round x\n",
     "layers_rnd = netFC(input_dim=num_vars*2, hidden_dims=[80]*4, output_dim=num_vars)\n",
     "round_func = roundModel(layers=layers_rnd, param_keys=[\"p\", \"a\"], var_keys=[\"x_bar\"], output_keys=[\"x_rnd\"],\n",
-    "                        int_ind={\"x_bar\":model.intInd}, name=\"round\")\n",
+    "                        int_ind={\"x_bar\":model.int_ind}, name=\"round\")\n",
     "_, problem = getNMProb(round_func)"
    ]
   },
@@ -712,7 +712,7 @@
     "# round x\n",
     "layers_rnd = netFC(input_dim=num_vars*2, hidden_dims=[80]*4, output_dim=num_vars)\n",
     "round_func = roundThresholdModel(layers=layers_rnd, param_keys=[\"p\", \"a\"], var_keys=[\"x_bar\"], output_keys=[\"x_rnd\"],\n",
-    "                                 int_ind={\"x_bar\":model.intInd}, name=\"round\")\n",
+    "                                 int_ind={\"x_bar\":model.int_ind}, name=\"round\")\n",
     "_, problem = getNMProb(round_func)"
    ]
   },
@@ -918,7 +918,7 @@
     "# round x\n",
     "layers_rnd = netFC(input_dim=num_vars*2, hidden_dims=[80]*4, output_dim=num_vars)\n",
     "round_func = roundModel(layers=layers_rnd, param_keys=[\"p\", \"a\"], var_keys=[\"x_bar\"], output_keys=[\"x_rnd\"],\n",
-    "                        int_ind={\"x_bar\":model.intInd}, name=\"round\")\n",
+    "                        int_ind={\"x_bar\":model.int_ind}, name=\"round\")\n",
     "problem_rel, problem_rnd = getNMProb(round_func)"
    ]
   },
@@ -1387,7 +1387,7 @@
    "source": [
     "from model import feasibilityPumpModel\n",
     "# feasibility pump model\n",
-    "problem_rel, problem_fp = feasibilityPumpModel([\"p\", \"a\"], getProb, sol_func, rnd_layer, int_ind=model.intInd, num_iters=3)"
+    "problem_rel, problem_fp = feasibilityPumpModel([\"p\", \"a\"], getProb, sol_func, rnd_layer, int_ind=model.int_ind, num_iters=3)"
    ]
   },
   {
@@ -1709,7 +1709,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:05<00:00, 179.45it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:18<00:00, 12.77it/s]\n"
      ]
     },
     {
@@ -1718,13 +1718,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      6.831584          1.355442      0.004911\n",
-      "std       1.731548          0.497593      0.001176\n",
-      "min       3.246814          0.762442      0.002025\n",
-      "25%       7.262399          0.762442      0.004014\n",
-      "50%       7.262399          1.762442      0.004664\n",
-      "75%       8.015585          1.762442      0.005669\n",
-      "max       8.015585          2.762442      0.010804\n"
+      "mean      5.098717          2.347503      0.076948\n",
+      "std       4.309753          2.867240      0.009993\n",
+      "min       0.000000          0.000000      0.068281\n",
+      "25%       1.750512          0.000000      0.071789\n",
+      "50%       3.619079          1.000000      0.073222\n",
+      "75%       7.766097          2.762442      0.078877\n",
+      "max      27.089672         14.475116      0.189841\n"
      ]
     }
    ],
@@ -1733,7 +1733,7 @@
     "for p, a in tqdm(list(zip(p_test, a_test))):\n",
     "    datapoints = {\"p\": torch.tensor(np.array([p]), dtype=torch.float32), \"a\":torch.tensor(np.array([a]), dtype=torch.float32), \"name\": \"test\"}\n",
     "    tick = time.time()\n",
-    "    output = problem(datapoints)\n",
+    "    output = problem_fp(datapoints)\n",
     "    tock = time.time()\n",
     "    x = output[\"test_x_rnd\"]\n",
     "    # get values\n",
