Add heuristic round

--- a/Test QP.ipynb
+++ b/Test QP.ipynb
@@ -98,7 +98,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:12<00:00, 13.78it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:11<00:00, 13.95it/s]\n"
      ]
     },
     {
@@ -107,36 +107,109 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     -0.301369          0.287015      0.071896\n",
-      "std       0.015466          0.665298      0.030828\n",
-      "min      -0.310000          0.000000      0.057077\n",
-      "25%      -0.310000          0.000000      0.061129\n",
-      "50%      -0.310000          0.000000      0.061881\n",
-      "75%      -0.300000          0.000000      0.062861\n",
-      "max      -0.212920          3.460264      0.228069\n"
+      "mean     -0.301369          0.287015      0.070999\n",
+      "std       0.015466          0.665298      0.029943\n",
+      "min      -0.310000          0.000000      0.051135\n",
+      "25%      -0.310000          0.000000      0.060987\n",
+      "50%      -0.310000          0.000000      0.061791\n",
+      "75%      -0.300000          0.000000      0.062636\n",
+      "max      -0.212920          3.460264      0.186131\n",
+      "Number of infeasible solution: 212\n"
      ]
     }
    ],
    "source": [
-    "sols, objvals, conviols, elapseds = [], [], [], []\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
     "for p in tqdm(p_test):\n",
     "    model.set_param_val({\"p\":p})\n",
     "    tick = time.time()\n",
     "    xval, objval = model.solve(\"scip\")\n",
     "    tock = time.time()\n",
-    "    sols.append(list(xval.values()))\n",
+    "    params.append(list(p))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
     "    objvals.append(objval)\n",
     "    conviols.append(sum(model.cal_violation()))\n",
     "    elapseds.append(tock - tick)\n",
-    "df = pd.DataFrame({\"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
     "time.sleep(1)\n",
-    "print(df.describe())"
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"res/qp_exact.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c6b6062-19a3-427d-86df-c76214fa3165",
+   "metadata": {},
+   "source": [
+    "## Heuristic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a8512b84-b103-40f5-ad04-c45d8f9e773f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.heuristic import naive_round"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "827e4eee-f749-4b2b-8549-f75f15a06d0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:13<00:00, 13.56it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.000000       1000.000000   1000.000000\n",
+      "mean     -0.302556          0.338047      0.068560\n",
+      "std       0.015731          0.694741      0.030061\n",
+      "min      -0.310000          0.000000      0.052426\n",
+      "25%      -0.310000          0.000000      0.057103\n",
+      "50%      -0.310000          0.000000      0.058109\n",
+      "75%      -0.300000          0.231860      0.059584\n",
+      "max      -0.212920          3.460264      0.183580\n",
+      "Number of infeasible solution: 335\n"
+     ]
+    }
+   ],
+   "source": [
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for p in tqdm(p_test):\n",
+    "    model.set_param_val({\"p\":p})\n",
+    "    model_rel = model.relax()\n",
+    "    tick = time.time()\n",
+    "    xval_rel, _ = model_rel.solve(\"scip\")\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    tock = time.time()\n",
+    "    params.append(list(p))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"res/qp_heur.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d761fd9-ab80-4f5a-80ec-cfafb9539b39",
+   "id": "407c9159-c50c-4f55-9ec2-fe3e163b74f1",
    "metadata": {},
    "outputs": [],
    "source": []
