--- a/Test Rosenbrock.ipynb
+++ b/Test Rosenbrock.ipynb
@@ -75,6 +75,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5ecf81ff-627d-444d-8d90-121c7e20c217",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nm datasets\n",
+    "from neuromancer.dataset import DictDataset\n",
+    "data_train = DictDataset({\"p\":p_train, \"a\":a_train}, name=\"train\")\n",
+    "data_test = DictDataset({\"p\":p_test, \"a\":a_test}, name=\"test\")\n",
+    "data_dev = DictDataset({\"p\":p_dev, \"a\":a_dev}, name=\"dev\")\n",
+    "# torch dataloaders\n",
+    "from torch.utils.data import DataLoader\n",
+    "loader_train = DataLoader(data_train, batch_size=32, num_workers=0, collate_fn=data_train.collate_fn, shuffle=True)\n",
+    "loader_test = DataLoader(data_test, batch_size=32, num_workers=0, collate_fn=data_test.collate_fn, shuffle=False)\n",
+    "loader_dev = DataLoader(data_dev, batch_size=32, num_workers=0, collate_fn=data_dev.collate_fn, shuffle=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a2b99751-3a6e-46dc-9e33-fdf68d813034",
    "metadata": {},
@@ -84,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f2e7f07c-6a97-44d6-aca7-56f395e0c964",
    "metadata": {},
    "outputs": [],
@@ -108,25 +127,81 @@
     }
    ],
    "source": [
-    "sols, objvals, conviols, elapseds = [], [], [], []\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
     "for p, a in tqdm(list(zip(p_test,a_test))):\n",
     "    model.set_param_val({\"p\":p, \"a\":a})\n",
     "    tick = time.time()\n",
     "    xval, objval = model.solve(\"scip\")\n",
     "    tock = time.time()\n",
+    "    params.append(list(p)+list(a))\n",
     "    sols.append(list(xval.values()))\n",
     "    objvals.append(objval)\n",
     "    conviols.append(sum(model.cal_violation()))\n",
     "    elapseds.append(tock - tick)\n",
     "df = pd.DataFrame({\"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
     "time.sleep(1)\n",
-    "print(df.describe())"
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/rb_exact.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5abc738-13b7-464b-9ac3-acee21c17d59",
+   "metadata": {},
+   "source": [
+    "## Heuristic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "750370ab-3335-4903-b77d-2898212d7c4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.heuristic import naive_round"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d761fd9-ab80-4f5a-80ec-cfafb9539b39",
+   "id": "8f5e1c4e-989a-4688-8199-86c78d95746f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                                                         | 0/1000 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
+    "    model.set_param_val({\"p\":p, \"a\":a})\n",
+    "    model_rel = model.relax()\n",
+    "    tick = time.time()\n",
+    "    xval_rel, _ = model_rel.solve(\"scip\")\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    tock = time.time()\n",
+    "    params.append(list(p)+list(a))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/rb_heur.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "980ea592-9292-449a-a952-808d3abf1696",
    "metadata": {},
    "outputs": [],
    "source": []
