Add steepness factor for Rosenbrock

--- a/Test Rosenbrock.ipynb
+++ b/Test Rosenbrock.ipynb
@@ -49,11 +49,12 @@
    "outputs": [],
    "source": [
     "# init\n",
+    "steepness = 20    # steepness factor\n",
+    "num_blocks = 5    # number of expression blocks\n",
     "num_data = 5000   # number of data\n",
     "test_size = 1000  # number of test size\n",
     "val_size = 1000   # number of validation size\n",
-    "train_size = num_data - test_size - val_size\n",
-    "num_blocks = 5"
+    "train_size = num_data - test_size - val_size"
    ]
   },
   {
@@ -109,12 +110,12 @@
    "outputs": [],
    "source": [
     "from src.problem import msRosenbrock\n",
-    "model = msRosenbrock(num_blocks)"
+    "model = msRosenbrock(steepness, num_blocks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "77e326fa-de2f-415e-a4d4-1f28eef6511a",
    "metadata": {},
    "outputs": [
@@ -122,7 +123,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|▌                                                                            | 8/1000 [28:58<66:16:48, 240.53s/it]"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [24:59<00:00,  1.50s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.000000            1000.0   1000.000000\n",
+      "mean      4.349035               0.0      1.498812\n",
+      "std       4.947727               0.0      3.686326\n",
+      "min       0.016877               0.0      0.091140\n",
+      "25%       0.693364               0.0      0.296067\n",
+      "50%       2.484704               0.0      0.789470\n",
+      "75%       6.249823               0.0      1.449742\n",
+      "max      29.810294               0.0     69.918254\n",
+      "Number of infeasible solution: 0\n"
      ]
     }
    ],
@@ -143,59 +160,6 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/rb_exact.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a5abc738-13b7-464b-9ac3-acee21c17d59",
-   "metadata": {},
-   "source": [
-    "## Heuristic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "750370ab-3335-4903-b77d-2898212d7c4e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.heuristic import naive_round"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f5e1c4e-989a-4688-8199-86c78d95746f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|                                                                                         | 0/1000 [00:00<?, ?it/s]"
-     ]
-    }
-   ],
-   "source": [
-    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
-    "    model.set_param_val({\"p\":p, \"a\":a})\n",
-    "    model_rel = model.relax()\n",
-    "    tick = time.time()\n",
-    "    xval_rel, _ = model_rel.solve(\"scip\")\n",
-    "    xval, objval = naive_round(xval_rel, model)\n",
-    "    tock = time.time()\n",
-    "    params.append(list(p)+list(a))\n",
-    "    sols.append(list(list(xval.values())[0].values()))\n",
-    "    objvals.append(objval)\n",
-    "    conviols.append(sum(model.cal_violation()))\n",
-    "    elapseds.append(tock - tick)\n",
-    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
-    "time.sleep(1)\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/rb_heur.csv\")"
    ]
   },
   {
